--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
     restart: always
     environment:
       MYSQL_DATABASE: 'db'
+      MYSQL_USER: 'user
+      MYSQL_PASSWORD: 'password'
       MYSQL_ROOT_PASSWORD: 'password'
     command: --default-authentication-plugin=mysql_native_password
     ports:
@@ -29,7 +31,7 @@ services:
       - data_volume:/var/lib/mysql
 
   migration:
-    image: mysql_migration
+    image: mathewhall/mysql_migration
     volumes:
       - ./db/migrations/:/docker-entrypoint-initdb.d/
     links:
