--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,37 +12,37 @@ services:
     depends_on:
       - rabbitmq
 
-  redis:
-    image: "redis:alpine"
+#  redis:
+#    image: "redis:alpine"
 
-  db:
-    image: mysql
-    restart: always
-    environment:
-      MYSQL_DATABASE: 'db'
-      MYSQL_USER: 'user'
-      MYSQL_PASSWORD: 'password'
-      MYSQL_ROOT_PASSWORD: 'password'
-    command: --default-authentication-plugin=mysql_native_password
-    ports:
-      - '3306:3306'
-    expose:
-      - '3306'
-    volumes:
-      - ./db/data_volume:/var/lib/mysql
-      - ./db/initialize/:/docker-entrypoint-initdb.d/
-
-  migration:
-    image: mathewhall/mysql_migration
-    volumes:
-      - ./db/migrations:/docker-entrypoint-migrations.d
-    depends_on:
-      - db
-    environment:
-      MYSQL_HOST: db
-      MYSQL_DATABASE: db
-      MYSQL_USER: user
-      MYSQL_PASSWORD: password
+#  db:
+#    image: mysql
+#    restart: always
+#    environment:
+#      MYSQL_DATABASE: 'db'
+#      MYSQL_USER: 'user'
+#      MYSQL_PASSWORD: 'password'
+#      MYSQL_ROOT_PASSWORD: 'password'
+#    command: --default-authentication-plugin=mysql_native_password
+#    ports:
+#      - '3306:3306'
+#    expose:
+#      - '3306'
+#    volumes:
+#      - ./db/data_volume:/var/lib/mysql
+#      - ./db/initialize/:/docker-entrypoint-initdb.d/
+#
+#  migration:
+#    image: mathewhall/mysql_migration
+#    volumes:
+#      - ./db/migrations:/docker-entrypoint-migrations.d
+#    depends_on:
+#      - db
+#    environment:
+#      MYSQL_HOST: db
+#      MYSQL_DATABASE: db
+#      MYSQL_USER: user
+#      MYSQL_PASSWORD: password
 
   rabbitmq:
     image: rabbitmq:management
