--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 services:
   api:
     image: "simple_proj_api:latest"
+    restart: unless-stopped
     ports:
       - "5000:5000"
     depends_on:
@@ -9,11 +10,12 @@ services:
 
   worker:
     image: "simple_proj_worker:latest"
+    restart: unless-stopped
     depends_on:
       - rabbitmq
 
-#  redis:
-#    image: "redis:alpine"
+  redis:
+    image: "redis:alpine"
 
 #  db:
 #    image: mysql
@@ -48,8 +50,13 @@ services:
     image: rabbitmq:management
     command: rabbitmq-server
     ports:
+      - "5672:5672"   
       - "15672:15672"
-      - "5672:5672"
+    healthcheck:
+        test: ["CMD", "curl", "-f", "http://localhost:15672"]
+        interval: 30s
+        timeout: 10s
+        retries: 5
 
     volumes:
       - ./volumes/rabbitmq:/var/lib/rabbitmq
