--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,6 +61,21 @@ services:
     volumes:
       - ./volumes/rabbitmq:/var/lib/rabbitmq
 
+  zookeeper:
+    image: 'bitnami/zookeeper:latest'
+    ports:
+      - '2181:2181'
+    environment:
+      - ALLOW_ANONYMOUS_LOGIN=yes
+
+  kafka:
+    image: 'bitnami/kafka:latest'
+    ports:
+      - '9092:9092'
+    environment:
+      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
+      - ALLOW_PLAINTEXT_LISTENER=yes
+
 volumes:
   data_volume:
 
